--- a/src/App.scss
+++ b/src/App.scss
@@ -20,6 +20,18 @@
     height: calc(100vh - 134px);
     background-color: #eff2f5 !important;
   }
+  .result {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    h4 {
+      flex: 1;
+    }
+    span {
+      flex: 1;
+      text-align: center;
+    }
+  }
   .home {
     &__new-button {
       height: 60px;
@@ -29,18 +41,42 @@
       border-color: none;
       border-style: none;
     }
-    .widget_form_item {
-      background-color: #fff;
-      padding: 25px;
-      border-radius: 15px;
-      div {
-        label {
-          width: 100%;
+
+    &__forms-list {
+      text-align: center;
+      margin-left: 8px;
+      .ant-card {
+        cursor: pointer;
+        transition: all 0.5s ease;
+        &:hover {
+          border-radius: 10px;
+          border: 1px solid rgb(214, 209, 209);
+          box-shadow: 8px 8px 8px -3px rgba(0, 0, 0, 0.1);
         }
-        .widget_form_controls {
-          display: flex;
-          justify-content: space-between;
-          width: inherit;
+      }
+    }
+    .is-entry {
+      form {
+        margin: 0 50px;
+        background: white;
+        padding: 30px;
+        border-radius: 10px;
+      }
+    }
+    .is-editing {
+      .widget_form_item {
+        background-color: #fff;
+        padding: 25px;
+        border-radius: 15px;
+        div {
+          label {
+            width: 100%;
+          }
+          .widget_form_controls {
+            display: flex;
+            justify-content: space-between;
+            width: inherit;
+          }
         }
       }
     }
